# web3cpp

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format-check.yml  cppcheck.yml
include/web3cpp/: dummy.h
source/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  dummy.cpp
